rename new_arrow -> new-arrow

--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -4975,7 +4975,7 @@
                             guests.
                           </div>
                           <div class="_9hxttoo">
-                            <label class="new_arrow-underscore" for="instance_notes"
+                            <label class="new-arrow-underscore" for="instance_notes"
                               >Private note (optional)</label
                             ><textarea
                               id="instance_notes"
