--- a/dashboard.html
+++ b/dashboard.html
@@ -2897,7 +2897,7 @@
                                     <span aria-hidden="true"
                                       >Today · 11:00pm – 11:30pm Philippines
                                       Time</span
-                                    ><span class="new_arrow-underscore"
+                                    ><span class="new-arrow-underscore"
                                       >Today · Start time: 11:00 PM, End time:
                                       11:30 PM Philippines Time</span
                                     >
