--- a/explore-where.html
+++ b/explore-where.html
@@ -174,7 +174,7 @@
                                                                   for="/homes-1-input"
                                                                   class="_1dr9xf9"
                                                                   ><span
-                                                                    class="new_arrow-underscore"
+                                                                    class="new-arrow-underscore"
                                                                     >Location</span
                                                                   >
                                                                   <div
