--- a/help.html
+++ b/help.html
@@ -1449,7 +1449,7 @@
                                         <div class="_kw9uzc">
                                           <div class="_1udzt2s">
                                             <div>
-                                              <span class="new_arrow-underscore"
+                                              <span class="new-arrow-underscore"
                                                 >List containing 2 items. Use
                                                 the “next” and “previous”
                                                 buttons below to navigate the
@@ -1827,12 +1827,12 @@
                                                       style="flex: 0 0 48px"
                                                     ></div>
                                                   </ul>
-                                                  <span class="new_arrow-underscore"
+                                                  <span class="new-arrow-underscore"
                                                     >Viewing item 2 of 2</span
                                                   >
                                                   <div class="_1aq9nzc">
                                                     <div>
-                                                      <div class="new_arrow-underscore">
+                                                      <div class="new-arrow-underscore">
                                                         <button
                                                           aria-label="Previous"
                                                           type="button"
@@ -1840,7 +1840,7 @@
                                                         >
                                                           <span class="relative"
                                                             ><span
-                                                              class="new_arrow-underscore"
+                                                              class="new-arrow-underscore"
                                                               >_</span
                                                             ><svg
                                                               viewBox="0 0 32 32"
