--- a/inbox.html
+++ b/inbox.html
@@ -8807,7 +8807,7 @@
                                       </div>
                                       <div class="w-100">
                                         <label
-                                          class="new_arrow-underscore"
+                                          class="new-arrow-underscore"
                                           for="message_input"
                                         ></label>
                                         <div class="_dta8n3">
