--- a/merchandising.html
+++ b/merchandising.html
@@ -1309,7 +1309,7 @@
                                                             <span
                                                               class="relative"
                                                               ><span
-                                                                class="new_arrow-underscore"
+                                                                class="new-arrow-underscore"
                                                                 >_</span
                                                               ><svg
                                                                 viewBox="0 0 32 32"
@@ -1334,7 +1334,7 @@
                                                                 </g></svg
                                                             ></span></button
                                                           ><span
-                                                            class="new_arrow-space"
+                                                            class="new-arrow-space"
                                                           ></span
                                                           ><button
                                                             aria-label="Next"
@@ -1344,7 +1344,7 @@
                                                             <span
                                                               class="relative"
                                                               ><span
-                                                                class="new_arrow-underscore"
+                                                                class="new-arrow-underscore"
                                                                 >_</span
                                                               ><svg
                                                                 viewBox="0 0 32 32"
