--- a/preferences.html
+++ b/preferences.html
@@ -345,7 +345,7 @@
                                         <div style="margin-bottom: 24px">
                                           <div class="_9hxttoo">
                                             <label
-                                              class="new_arrow-underscore"
+                                              class="new-arrow-underscore"
                                               for="preferred_locale"
                                               >Preferred language</label
                                             >
@@ -820,7 +820,7 @@
                                         >
                                           <div class="_9hxttoo">
                                             <label
-                                              class="new_arrow-underscore"
+                                              class="new-arrow-underscore"
                                               for="native_currency"
                                               >Preferred currency</label
                                             >
@@ -1054,7 +1054,7 @@
                                           "
                                         >
                                           <div class="_9hxttoo">
-                                            <label class="new_arrow-underscore" for="timezone"
+                                            <label class="new-arrow-underscore" for="timezone"
                                               >Time zone</label
                                             >
                                             <div class="_wlf6154">
@@ -2054,7 +2054,7 @@
                                             <div style="margin-bottom: 24px">
                                               <div class="_9hxttoo">
                                                 <label
-                                                  class="new_arrow-underscore"
+                                                  class="new-arrow-underscore"
                                                   for="preferred_locale"
                                                   >Preferred language</label
                                                 >
@@ -2362,7 +2362,7 @@
                                             >
                                               <div class="_9hxttoo">
                                                 <label
-                                                  class="new_arrow-underscore"
+                                                  class="new-arrow-underscore"
                                                   for="native_currency"
                                                   >Preferred currency</label
                                                 >
@@ -2604,7 +2604,7 @@
                                             >
                                               <div class="_9hxttoo">
                                                 <label
-                                                  class="new_arrow-underscore"
+                                                  class="new-arrow-underscore"
                                                   for="timezone"
                                                   >Time zone</label
                                                 >
