--- a/profile.html
+++ b/profile.html
@@ -1439,7 +1439,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="new_arrow-space"></div>
+                                                  <div class="new-arrow-space"></div>
                                                 </div>
                                                 <div>
                                                   <span
@@ -2588,7 +2588,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                 >
                                               </div>
                                             </div>
-                                            <div class="new_arrow-space"></div>
+                                            <div class="new-arrow-space"></div>
                                           </div>
                                           <div>
                                             <span
