--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -164,7 +164,7 @@
                                 aria-atomic="true"
                                 aria-live="polite"
                                 role="status"
-                                class="new_arrow-underscore"
+                                class="new-arrow-underscore"
                               ></span>
                             </div>
                           </div>
