--- a/resources.html
+++ b/resources.html
@@ -138,14 +138,14 @@
                                   <div class="_gykqwj">
                                     <span
                                       id="Koan-support-koan-input__description"
-                                      class="new_arrow-underscore"
+                                      class="new-arrow-underscore"
                                       >Navigate forward to access suggested
                                       results</span
                                     ><span
                                       aria-atomic="true"
                                       aria-live="polite"
                                       role="status"
-                                      class="new_arrow-underscore"
+                                      class="new-arrow-underscore"
                                     ></span>
                                     <ul
                                       aria-label="Search suggestions"
@@ -360,13 +360,13 @@
                       <div class="_gykqwj">
                         <span
                           id="Koan-support-koan-input__description"
-                          class="new_arrow-underscore"
+                          class="new-arrow-underscore"
                           >Navigate forward to access suggested results</span
                         ><span
                           aria-atomic="true"
                           aria-live="polite"
                           role="status"
-                          class="new_arrow-underscore"
+                          class="new-arrow-underscore"
                         ></span>
                         <ul
                           aria-label="Search suggestions"
@@ -1107,7 +1107,7 @@
                                                     class="_1c377o8"
                                                   >
                                                     <span class="relative"
-                                                      ><span class="new_arrow-underscore"
+                                                      ><span class="new-arrow-underscore"
                                                         >_</span
                                                       ><svg
                                                         viewBox="0 0 32 32"
@@ -1131,14 +1131,14 @@
                                                           ></path>
                                                         </g></svg
                                                     ></span></button
-                                                  ><span class="new_arrow-space"></span
+                                                  ><span class="new-arrow-space"></span
                                                   ><button
                                                     aria-label="Next"
                                                     type="button"
                                                     class="_1c377o8"
                                                   >
                                                     <span class="relative"
-                                                      ><span class="new_arrow-underscore"
+                                                      ><span class="new-arrow-underscore"
                                                         >_</span
                                                       ><svg
                                                         viewBox="0 0 32 32"
@@ -1834,7 +1834,7 @@
                                                     class="_1c377o8"
                                                   >
                                                     <span class="relative"
-                                                      ><span class="new_arrow-underscore"
+                                                      ><span class="new-arrow-underscore"
                                                         >_</span
                                                       ><svg
                                                         viewBox="0 0 32 32"
@@ -1858,14 +1858,14 @@
                                                           ></path>
                                                         </g></svg
                                                     ></span></button
-                                                  ><span class="new_arrow-space"></span
+                                                  ><span class="new-arrow-space"></span
                                                   ><button
                                                     aria-label="Next"
                                                     type="button"
                                                     class="_1c377o8"
                                                   >
                                                     <span class="relative"
-                                                      ><span class="new_arrow-underscore"
+                                                      ><span class="new-arrow-underscore"
                                                         >_</span
                                                       ><svg
                                                         viewBox="0 0 32 32"
@@ -2561,7 +2561,7 @@
                                                     class="_1c377o8"
                                                   >
                                                     <span class="relative"
-                                                      ><span class="new_arrow-underscore"
+                                                      ><span class="new-arrow-underscore"
                                                         >_</span
                                                       ><svg
                                                         viewBox="0 0 32 32"
@@ -2585,14 +2585,14 @@
                                                           ></path>
                                                         </g></svg
                                                     ></span></button
-                                                  ><span class="new_arrow-space"></span
+                                                  ><span class="new-arrow-space"></span
                                                   ><button
                                                     aria-label="Next"
                                                     type="button"
                                                     class="_1c377o8"
                                                   >
                                                     <span class="relative"
-                                                      ><span class="new_arrow-underscore"
+                                                      ><span class="new-arrow-underscore"
                                                         >_</span
                                                       ><svg
                                                         viewBox="0 0 32 32"
@@ -3287,7 +3287,7 @@
                                                   class="_1c377o8"
                                                 >
                                                   <span class="relative"
-                                                    ><span class="new_arrow-underscore"
+                                                    ><span class="new-arrow-underscore"
                                                       >_</span
                                                     ><svg
                                                       viewBox="0 0 32 32"
@@ -3311,14 +3311,14 @@
                                                         ></path>
                                                       </g></svg
                                                   ></span></button
-                                                ><span class="new_arrow-space"></span
+                                                ><span class="new-arrow-space"></span
                                                 ><button
                                                   aria-label="Next"
                                                   type="button"
                                                   class="_1c377o8"
                                                 >
                                                   <span class="relative"
-                                                    ><span class="new_arrow-underscore"
+                                                    ><span class="new-arrow-underscore"
                                                       >_</span
                                                     ><svg
                                                       viewBox="0 0 32 32"
