--- a/reviews.html
+++ b/reviews.html
@@ -802,7 +802,7 @@
                                         type="checkbox"
                                         id="appreciation_social_bonding"
                                         name="appreciation_social_bonding"
-                                        class="new_arrow-underscore"
+                                        class="new-arrow-underscore"
                                         value="Great for social bonding"
                                       />
                                       <div class="_1wopp8n1">
@@ -854,7 +854,7 @@
                                         type="checkbox"
                                         id="appreciation_storytelling"
                                         name="appreciation_storytelling"
-                                        class="new_arrow-underscore"
+                                        class="new-arrow-underscore"
                                         value="Super storytelling"
                                       />
                                       <div class="_1h2rnec">
@@ -906,7 +906,7 @@
                                         type="checkbox"
                                         id="appreciation_setting"
                                         name="appreciation_setting"
-                                        class="new_arrow-underscore"
+                                        class="new-arrow-underscore"
                                         value="Magical setting"
                                       />
                                       <div class="_1h2rnec">
@@ -958,7 +958,7 @@
                                         type="checkbox"
                                         id="appreciation_personalization"
                                         name="appreciation_personalization"
-                                        class="new_arrow-underscore"
+                                        class="new-arrow-underscore"
                                         value="Thoughtful personalization"
                                       />
                                       <div class="_1h2rnec">
@@ -1010,7 +1010,7 @@
                                         type="checkbox"
                                         id="appreciation_value"
                                         name="appreciation_value"
-                                        class="new_arrow-underscore"
+                                        class="new-arrow-underscore"
                                         value="Great value"
                                       />
                                       <div class="_1h2rnec">
@@ -1062,7 +1062,7 @@
                                         type="checkbox"
                                         id="appreciation_family_friendly"
                                         name="appreciation_family_friendly"
-                                        class="new_arrow-underscore"
+                                        class="new-arrow-underscore"
                                         value="Family-friendly activity"
                                       />
                                       <div class="_1h2rnec">
