--- a/specific_trip.html
+++ b/specific_trip.html
@@ -678,7 +678,7 @@
                                                                   <span
                                                                     class="relative"
                                                                     ><span
-                                                                      class="new_arrow-underscore"
+                                                                      class="new-arrow-underscore"
                                                                       >_</span
                                                                     ><svg
                                                                       viewBox="0 0 32 32"
