--- a/transaction_history.html
+++ b/transaction_history.html
@@ -730,7 +730,7 @@
                                                     <div class="_1f6bwyr7">
                                                       <div class="_9hxttoo">
                                                         <label
-                                                          class="new_arrow-underscore"
+                                                          class="new-arrow-underscore"
                                                           for="filter-start-month-select"
                                                           >Filter Start
                                                           Month</label
@@ -816,7 +816,7 @@
                                                     <div class="_170x3337">
                                                       <div class="_9hxttoo">
                                                         <label
-                                                          class="new_arrow-underscore"
+                                                          class="new-arrow-underscore"
                                                           for="filter-start-year-select"
                                                           >Filter Start
                                                           Year</label
@@ -944,7 +944,7 @@
                                                     <div class="_1f6bwyr7">
                                                       <div class="_9hxttoo">
                                                         <label
-                                                          class="new_arrow-underscore"
+                                                          class="new-arrow-underscore"
                                                           for="filter-end-month-select"
                                                           >Filter End
                                                           Month</label
@@ -1030,7 +1030,7 @@
                                                     <div class="_170x3337">
                                                       <div class="_9hxttoo">
                                                         <label
-                                                          class="new_arrow-underscore"
+                                                          class="new-arrow-underscore"
                                                           for="filter-end-year-select"
                                                           >Filter End
                                                           Year</label
