--- a/products.html
+++ b/products.html
@@ -2138,7 +2138,7 @@
                                                       margin-bottom: 0px;
                                                     "
                                                   >
-                                                    <div class="_7ts20mk">
+                                                    <div class="explore__list-w-rapper-mx-0">
                                                       <div class="_c991cpe">
                                                         <div class="explore__list-full-wh">
                                                           <div class="_9342og">
@@ -9871,7 +9871,7 @@
                                                       "
                                                     >
                                                       <div
-                                                        class="_7ts20mk"
+                                                        class="explore__list-w-rapper-mx-0"
                                                         style="
                                                           transform: translateX(
                                                             0%
