--- a/resources.html
+++ b/resources.html
@@ -2541,7 +2541,7 @@
                                       </div>
                                     </div>
                                     <div class="_pawvzww">
-                                      <div class="_1lo0c2q">
+                                      <div class="explore__time-btn-wrapper">
                                         <div class="vh-100">
                                           <div class="relative">
                                             <div
